[package]
name = "image-bit-planes"
version = "0.1.0"
authors = ["Matt Consto <matt@consto.uk>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
hex = "0.4.2"
image = "0.23.6"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
